Scaling data w/ MinMaxScaler

--- a/train.ipynb
+++ b/train.ipynb
@@ -14,7 +14,7 @@
     "import seaborn as sns\n",
     "from sklearn.utils import resample\n",
     "from sklearn.pipeline import Pipeline\n",
-    "from sklearn.preprocessing import MinMaxScaler, StandardScaler"
+    "from sklearn.preprocessing import MinMaxScaler"
    ]
   },
   {
@@ -1340,7 +1340,7 @@
    "id": "a8624e85",
    "metadata": {},
    "source": [
-    "PREPORCESSING"
+    "SCALING"
    ]
   },
   {
@@ -1348,13 +1348,371 @@
    "id": "ed423293",
    "metadata": {},
    "source": [
-    "We have two different dataframe as df_regression and df_classification."
+    "We have two different dataframe as df_regression and df_classification.\n",
+    "Firstly, We start with splitting data as x and y."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "034b7857",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_regression = df_regression.quality\n",
+    "x_regression = df_regression.drop(\"quality\", axis = 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "500125a3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_classification = df_classification.Target\n",
+    "x_classification = df_classification.drop(\"Target\", axis = 1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2fcf26c2",
+   "metadata": {},
+   "source": [
+    "We use 'MinMaxScaler' for normalizing. This estimator scales and translates each feature individually such that it is in the given range on the training set, e.g. between 0 and 1. we will not use 'StandardScaler', because our dataset is not normally distributed. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "59b97f46",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scaler = MinMaxScaler()\n",
+    "x_regression = scaler.fit_transform(x_regression)\n",
+    "x_classification = scaler.fit_transform(x_classification)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "062c3259",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "features= df_regression.columns.tolist()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "47c44e14",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_regression = pd.DataFrame(x_regression,columns=features[:-1])\n",
+    "x_classification = pd.DataFrame(x_classification,columns=features[:-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "747449da",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>fixed_acidity</th>\n",
+       "      <th>volatile_acidity</th>\n",
+       "      <th>citric_acid</th>\n",
+       "      <th>residual_sugar</th>\n",
+       "      <th>chlorides</th>\n",
+       "      <th>free_sulfur_dioxide</th>\n",
+       "      <th>total_sulfur_dioxide</th>\n",
+       "      <th>density</th>\n",
+       "      <th>pH</th>\n",
+       "      <th>sulphates</th>\n",
+       "      <th>alcohol</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.194690</td>\n",
+       "      <td>0.476027</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.020690</td>\n",
+       "      <td>0.425710</td>\n",
+       "      <td>0.211268</td>\n",
+       "      <td>0.081272</td>\n",
+       "      <td>0.340675</td>\n",
+       "      <td>0.456693</td>\n",
+       "      <td>0.107784</td>\n",
+       "      <td>0.215385</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.513274</td>\n",
+       "      <td>0.335616</td>\n",
+       "      <td>0.49</td>\n",
+       "      <td>0.082759</td>\n",
+       "      <td>0.313856</td>\n",
+       "      <td>0.056338</td>\n",
+       "      <td>0.035336</td>\n",
+       "      <td>0.685022</td>\n",
+       "      <td>0.330709</td>\n",
+       "      <td>0.179641</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.247788</td>\n",
+       "      <td>0.729452</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.231034</td>\n",
+       "      <td>0.141903</td>\n",
+       "      <td>0.056338</td>\n",
+       "      <td>0.028269</td>\n",
+       "      <td>0.479442</td>\n",
+       "      <td>0.700787</td>\n",
+       "      <td>0.125749</td>\n",
+       "      <td>0.353846</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.513274</td>\n",
+       "      <td>0.219178</td>\n",
+       "      <td>0.42</td>\n",
+       "      <td>0.041379</td>\n",
+       "      <td>0.222037</td>\n",
+       "      <td>0.464789</td>\n",
+       "      <td>0.148410</td>\n",
+       "      <td>0.605727</td>\n",
+       "      <td>0.503937</td>\n",
+       "      <td>0.317365</td>\n",
+       "      <td>0.230769</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.513274</td>\n",
+       "      <td>0.219178</td>\n",
+       "      <td>0.42</td>\n",
+       "      <td>0.041379</td>\n",
+       "      <td>0.222037</td>\n",
+       "      <td>0.464789</td>\n",
+       "      <td>0.148410</td>\n",
+       "      <td>0.605727</td>\n",
+       "      <td>0.503937</td>\n",
+       "      <td>0.317365</td>\n",
+       "      <td>0.230769</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   fixed_acidity  volatile_acidity  citric_acid  residual_sugar  chlorides  \\\n",
+       "0       0.194690          0.476027         0.00        0.020690   0.425710   \n",
+       "1       0.513274          0.335616         0.49        0.082759   0.313856   \n",
+       "2       0.247788          0.729452         0.00        0.231034   0.141903   \n",
+       "3       0.513274          0.219178         0.42        0.041379   0.222037   \n",
+       "4       0.513274          0.219178         0.42        0.041379   0.222037   \n",
+       "\n",
+       "   free_sulfur_dioxide  total_sulfur_dioxide   density        pH  sulphates  \\\n",
+       "0             0.211268              0.081272  0.340675  0.456693   0.107784   \n",
+       "1             0.056338              0.035336  0.685022  0.330709   0.179641   \n",
+       "2             0.056338              0.028269  0.479442  0.700787   0.125749   \n",
+       "3             0.464789              0.148410  0.605727  0.503937   0.317365   \n",
+       "4             0.464789              0.148410  0.605727  0.503937   0.317365   \n",
+       "\n",
+       "    alcohol  \n",
+       "0  0.215385  \n",
+       "1  0.000000  \n",
+       "2  0.353846  \n",
+       "3  0.230769  \n",
+       "4  0.230769  "
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x_regression.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "ec036991",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>fixed_acidity</th>\n",
+       "      <th>volatile_acidity</th>\n",
+       "      <th>citric_acid</th>\n",
+       "      <th>residual_sugar</th>\n",
+       "      <th>chlorides</th>\n",
+       "      <th>free_sulfur_dioxide</th>\n",
+       "      <th>total_sulfur_dioxide</th>\n",
+       "      <th>density</th>\n",
+       "      <th>pH</th>\n",
+       "      <th>sulphates</th>\n",
+       "      <th>alcohol</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.486726</td>\n",
+       "      <td>0.130137</td>\n",
+       "      <td>0.35</td>\n",
+       "      <td>0.027972</td>\n",
+       "      <td>0.105175</td>\n",
+       "      <td>0.106061</td>\n",
+       "      <td>0.077739</td>\n",
+       "      <td>0.484076</td>\n",
+       "      <td>0.393701</td>\n",
+       "      <td>0.282209</td>\n",
+       "      <td>0.430769</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.292035</td>\n",
+       "      <td>0.150685</td>\n",
+       "      <td>0.36</td>\n",
+       "      <td>0.048951</td>\n",
+       "      <td>0.088481</td>\n",
+       "      <td>0.045455</td>\n",
+       "      <td>0.014134</td>\n",
+       "      <td>0.282643</td>\n",
+       "      <td>0.417323</td>\n",
+       "      <td>0.104294</td>\n",
+       "      <td>0.430769</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.345133</td>\n",
+       "      <td>0.150685</td>\n",
+       "      <td>0.40</td>\n",
+       "      <td>0.244755</td>\n",
+       "      <td>0.071786</td>\n",
+       "      <td>0.015152</td>\n",
+       "      <td>0.010601</td>\n",
+       "      <td>0.536624</td>\n",
+       "      <td>0.503937</td>\n",
+       "      <td>0.177914</td>\n",
+       "      <td>0.492308</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.415929</td>\n",
+       "      <td>0.143836</td>\n",
+       "      <td>0.45</td>\n",
+       "      <td>0.020979</td>\n",
+       "      <td>0.075125</td>\n",
+       "      <td>0.257576</td>\n",
+       "      <td>0.109541</td>\n",
+       "      <td>0.345541</td>\n",
+       "      <td>0.346457</td>\n",
+       "      <td>0.319018</td>\n",
+       "      <td>0.415385</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.309735</td>\n",
+       "      <td>0.178082</td>\n",
+       "      <td>0.28</td>\n",
+       "      <td>0.062937</td>\n",
+       "      <td>0.090150</td>\n",
+       "      <td>0.166667</td>\n",
+       "      <td>0.084806</td>\n",
+       "      <td>0.490446</td>\n",
+       "      <td>0.385827</td>\n",
+       "      <td>0.220859</td>\n",
+       "      <td>0.200000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   fixed_acidity  volatile_acidity  citric_acid  residual_sugar  chlorides  \\\n",
+       "0       0.486726          0.130137         0.35        0.027972   0.105175   \n",
+       "1       0.292035          0.150685         0.36        0.048951   0.088481   \n",
+       "2       0.345133          0.150685         0.40        0.244755   0.071786   \n",
+       "3       0.415929          0.143836         0.45        0.020979   0.075125   \n",
+       "4       0.309735          0.178082         0.28        0.062937   0.090150   \n",
+       "\n",
+       "   free_sulfur_dioxide  total_sulfur_dioxide   density        pH  sulphates  \\\n",
+       "0             0.106061              0.077739  0.484076  0.393701   0.282209   \n",
+       "1             0.045455              0.014134  0.282643  0.417323   0.104294   \n",
+       "2             0.015152              0.010601  0.536624  0.503937   0.177914   \n",
+       "3             0.257576              0.109541  0.345541  0.346457   0.319018   \n",
+       "4             0.166667              0.084806  0.490446  0.385827   0.220859   \n",
+       "\n",
+       "    alcohol  \n",
+       "0  0.430769  \n",
+       "1  0.430769  \n",
+       "2  0.492308  \n",
+       "3  0.415385  \n",
+       "4  0.200000  "
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x_classification.head()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "034b7857",
+   "id": "17f765c3",
    "metadata": {},
    "outputs": [],
    "source": []
