created new model file

--- a/Combine_Of_XGBOOST_NN.ipynb
+++ b/Combine_Of_XGBOOST_NN.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "id": "ae74a4c0",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
     "from sklearn.ensemble import StackingClassifier\n",
     "from xgboost import XGBClassifier\n",
     "from sklearn.metrics import accuracy_score\n",
-    "from sklearn.metrics import mean_absolute_error"
+    "from sklearn.metrics import mean_squared_error"
    ]
   },
   {
@@ -431,7 +431,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy score of StackingClassifier:0.984\n"
+      "Accuracy score of StackingClassifier:0.98\n"
      ]
     }
    ],
@@ -450,7 +450,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy score of MLPClassifier:0.802\n"
+      "Accuracy score of MLPClassifier:0.8\n"
      ]
     }
    ],
@@ -488,12 +488,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loss of StackingClassifier:0.016\n"
+      "Loss of StackingClassifier:0.02\n"
      ]
     }
    ],
    "source": [
-    "loss = mean_absolute_error(label_test, predictions)\n",
+    "loss = mean_squared_error(label_test, predictions)\n",
     "print('Loss of '+ stacking_model.__class__.__name__ + \":\" +str(loss))"
    ]
   },
@@ -507,12 +507,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loss of MLPClassifier:0.198\n"
+      "Loss of MLPClassifier:0.2\n"
      ]
     }
    ],
    "source": [
-    "loss_mlp = mean_absolute_error(label_test, mlp_predictions)\n",
+    "loss_mlp = mean_squared_error(label_test, mlp_predictions)\n",
     "print('Loss of '+ mlp_model.__class__.__name__ + \":\" +str(loss_mlp))"
    ]
   },
@@ -531,13 +531,13 @@
     }
    ],
    "source": [
-    "loss_xgb = mean_absolute_error(label_test, xgb_predictions)\n",
+    "loss_xgb = mean_squared_error(label_test, xgb_predictions)\n",
     "print('Loss of '+ xgb.__class__.__name__ + \":\" +str(loss_xgb))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "id": "dc21b933",
    "metadata": {},
    "outputs": [],
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "id": "e4667286",
    "metadata": {},
    "outputs": [
@@ -586,12 +586,12 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Neural Network with XGBOOST</td>\n",
-       "      <td>0.984</td>\n",
+       "      <td>0.980</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Neural Network without XGBOOST</td>\n",
-       "      <td>0.802</td>\n",
+       "      <td>0.800</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -604,12 +604,12 @@
       ],
       "text/plain": [
        "                           Models  Accuracy\n",
-       "0     Neural Network with XGBOOST     0.984\n",
-       "1  Neural Network without XGBOOST     0.802\n",
+       "0     Neural Network with XGBOOST     0.980\n",
+       "1  Neural Network without XGBOOST     0.800\n",
        "2                   XGBClassifier     0.972"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -620,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "id": "b863f794",
    "metadata": {},
    "outputs": [],
@@ -635,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "id": "9450d810",
    "metadata": {},
    "outputs": [
@@ -668,12 +668,12 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Neural Network with XGBOOST</td>\n",
-       "      <td>0.016</td>\n",
+       "      <td>0.020</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Neural Network without XGBOOST</td>\n",
-       "      <td>0.198</td>\n",
+       "      <td>0.200</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -686,12 +686,12 @@
       ],
       "text/plain": [
        "                           Models   Loss\n",
-       "0     Neural Network with XGBOOST  0.016\n",
-       "1  Neural Network without XGBOOST  0.198\n",
+       "0     Neural Network with XGBOOST  0.020\n",
+       "1  Neural Network without XGBOOST  0.200\n",
        "2                   XGBClassifier  0.028"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -702,11 +702,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "d2831992",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "with open('nn_xgb_model.pkl', 'wb') as f:\n",
+    "    pickle.dump(stacking_model, f)"
+   ]
   }
  ],
  "metadata": {
